fix the default database name, add some logs for debugging

--- a/.env_example
+++ b/.env_example
@@ -11,7 +11,7 @@ DISCOVERY_ENGINE_ID="your-discovery-engine-id"
 DB_STAGING_BUCKET="gs://datasense_alloydb_vectorstore"
 DB_CLUSTER="datasense"
 DB_INSTANCE="datasense-primary"
-DB_DATABASE="datasensedb"
+DB_DATABASE="postgres"
 DB_TABLE_NAME="partnertable"
 DB_PASSWORD="5kL<?7{OXq]a"
 DB_USER="postgres”
