add the library for vertex AI search

--- a/.env_example
+++ b/.env_example
@@ -14,4 +14,8 @@ DB_INSTANCE="datasense-primary"
 DB_DATABASE="postgres"
 DB_TABLE_NAME="partnertable"
 DB_PASSWORD="5kL<?7{OXq]a"
-DB_USER="postgres”
+DB_USER="postgres"
+
+VERTEXAI_SEARCH_ENGINE_ID="datasense-test_1744153572996"
+SEARCH_ENGINE_LOCATION="global"
+GCP_PROJECT_NUMBER="176935887576"
