update the model to gemini-2.5-pro, the previous preview version is discontinued

--- a/.env_example
+++ b/.env_example
@@ -2,7 +2,7 @@ GCP_PROJECT="lamb-puppy-215354"
 GCP_LOCATION="us-central1"
 SYSTEM_INSTRUCTION='You are Gemini, a helpful chat assistant. Please Avoid markdown or other text formatting in your responses as it confuses the user.'
 AUTO_GENERATE_SEARCH_SYSTEM_INSTRUCTION='Uses the users last request and prior chat history to generate a detailed and descriptive search prompt'
-MODEL_ID="gemini-2.5-flash-preview-05-20"
+MODEL_ID="gemini-2.5-pro"
 MODEL_TEMPERATURE=0.2
 MODEL_TOP_P=0.8
 MODEL_MAX_OUTPUT_TOKENS=1024
